src/styles.css
/* styles.css */
/* From: Josh's Custom CSS Reset
  https://www.joshwcomeau.com/css/custom-css-reset/
*/
*,
*::before,
*::after {
    box-sizing: border-box;
}

* {
    margin: 0;
    padding: 0;
}

body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
}

img,
picture,
video,
canvas,
svg {
    display: block;
    /* max-width: 100%; */
}

input,
button,
textarea,
select {
    font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
    overflow-wrap: break-word;
}

#root,
#__next {
    isolation: isolate;
}

/* -------------------------------------------------------------------------
*/
/* @font-face {
    font-family: myFirstFont;
    src: url('./fonts/star-jedi-font/StarJedi-DGRW.ttf') format('truetype');
} */


:root {
    font-size: 12px;
    --font-size-tiny: .5rem;
    --font-size-small: 1rem;
    --font-size-medium: 1.5rem;
    --font-size-large: 1.7rem;
    --font-size-jumbo: 4rem;

    --page-width: 750px;


    --big-icon-side-length: 100px;
    --small-icon-side-length: 33px;
    --search-section-length: calc(1.5 * var(--big-icon-side-length));

    --standard-gap: 10px;
    --small-container-gap: 3px;


    --general-padding: 20px;
    --text-box-padding: 5px;



    --button-height: 40px;
    --button-padding: 5px;


    white-space: nowrap;
    --general-border-radius: 15px;
    --future-weather-padding: 8px;


}




.dark {
    /* Nighttime Color Scheme*/
    --primary-background-color: #083344;
    --primary-font-color: #fef3c7;

    --high-temp-color: red;
    --low-temp-color: rgb(67, 189, 87);
    --humidity-color: rgb(115, 198, 185);


}

.light {
    /* Morning/Day/Evening Color Scheme*/
    --primary-background-color: #fef3c7;
    --primary-font-color: #1c1917;

    --high-temp-color: red;
    --low-temp-color: blue;
    --humidity-color: rgb(132, 73, 215);
}

body {
    background-image: url("/home/asteroidblues30/repos/star-wars-weather/src/backgrounds/stars.jpg");
    background-size: cover;

    display: flex;
    justify-content: center;
    align-items: center;

    /* height: 100vh; */
}




.main-container {

    /* font-family: myFirstFont; */
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    gap: 15px;

    border-radius: var(--general-border-radius);
    /* width: 85vw; */
    min-width: 1250px;

    margin: 50px;
    border: 10px solid var(--primary-background-color);

    background-color: var(--primary-background-color);
    /* background-image: url("./backgrounds/sunset-bespin.png"); */
    height: 88vh;

}





.search-container {
    display: flex;
    width: var(--search-section-length);

    justify-content: space-between;


}

.header {
    /* height: 10vh; */
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: var(--standard-gap);

    width: 100%;

    height: 100px;

}


.today-header {
    font-size: var(--font-size-jumbo);
    text-align: center;

    /* padding: var(--general-padding); */

    /* border: 2px solid black; */

    background-color: var(--primary-background-color);
    color: var(--primary-font-color);
    white-space: nowrap;
}

.convert-temp-btn {
    font-size: var(--font-size-large);
    width: 180px;
    height: var(--button-height);
   
    border-radius: var(--general-border-radius);
    padding: var(--button-padding);
}

.search-bar {
    font-size: var(--font-size-large);
    /* align-self: center; */
    width: 300px;
    height: var(--button-height);
    margin-left: auto;
    border-radius: var(--general-border-radius);

    /* padding: var(--text-box-padding); */

    padding: var(--button-padding);
}

.search-btn {
    font-size: var(--font-size-large);
    border-radius: var(--general-border-radius);
    width: 100px;
    height: var(--button-height);
    padding: var(--button-padding);
}

.middle-section {
    width: 100%;
    height: 60vh;
    border-radius: var(--general-border-radius);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: var(--standard-gap);

    background-position: 0 center;
    background-repeat: no-repeat;
    background-size: cover;

   
}



.todays-weather-container {

    width: 500px;
    /* display: grid; */


    display: flex;
    flex-direction: column;
    gap: 15px;

    border: 2px solid black;
    padding: 20px;
    border-radius: var(--general-border-radius);

    background-color: var(--primary-background-color);
    color: var(--primary-font-color);


}

.weather-container-header {
    display: flex;
    width: 100%;
    gap: var(--standard-gap);
}

.todays-weather-location {
    font-size: var(--font-size-large);
    /* text-align: center; */
    /* grid-column: 1 / 4; */

    justify-content: space-between;
    align-items: center;
    background-color: var(--primary-background-color);
    overflow: hidden;
    text-overflow: ellipsis;

}

.todays-weather-localtime {

    margin-left: auto;
    font-size: var(--font-size-large);
    white-space: nowrap;
}

.weather-container-second-row {
    display: flex;
    gap: 25px;
    justify-content: left;
}

.todays-icon-container {
    grid-row: 2 / 4;


    width: var(--big-icon-side-length);
    height: var(--big-icon-side-length);

    /* border: 2px solid black; */
    background-position: center center;
    background-repeat: no-repeat;
    background-size: contain;

    flex: 0 0 auto;

    background-color: white;

}


.temp-and-conditions-container {
    display: flex;
    flex-direction: column;
    justify-content: center;

}

.current-conditions {
    font-size: var(--font-size-large);
}

.current-temp {
    font-size: var(--font-size-jumbo);
    /* margin-left: auto; */


    /* border: 2px solid black; */
    background-color: var(--primary-background-color);
}


.high-low-box {
    display: flex;
    flex-direction: column;

    /* margin-right:auto; */
    justify-content: center;
}

/* .low-box {
    grid-column: 2 / 3;


}

.high-box {
    grid-column: 3 / 4;


} */



.condition-row {
    font-size: var(--font-size-medium);
    /* border: 2px solid black; */

    display: flex;
    /* align-self: start;
    justify-self: center; */

    background-color: var(--primary-background-color);
    gap: 5px;
}

.high {
    color: var(--high-temp-color);
    /* border: 2px solid black; */
}

.low {
    color: var(--low-temp-color);
    /* border: 2px solid black; */
}

.humidity {
    color: var(--humidity-color);
}



.current-description {
    font-size: var(--font-size-large);
    /* text-align: center; */
    /* border: 2px solid black; */

    align-self: center;
    justify-self: center;
    grid-column: 1 / 4;

    background-color: var(--primary-background-color);

    /* white-space: ; */
    white-space: wrap;
}






.weather-like{
   
    
    border-radius: var(--general-border-radius);
    padding: var(--button-padding);
    font-size: var(--font-size-medium);
    
   

    border: 3px solid black;
    
    background-color:  var(--primary-background-color);
    color: var(--primary-font-color);
}

.upcoming-container {
    display: flex;
    /* border: 2px solid black; */
    width: 100%;
    justify-content: space-around;

    gap: 13px;
    padding: 10px;

    /* height: 20vh; */
    background-color: var(--primary-background-color);

    overflow-x: scroll;
    overflow-y: hidden;
}

.future-weather-box {
    height: 100px;
    /* width: 75px; */
    font-size: var(--font-size-small);
    display:flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: var(--small-container-gap);
    border: 2px solid var(--primary-font-color);
    border-radius: var(--general-border-radius);
    padding: var(--future-weather-padding);

    color: var(--primary-font-color);
}

.future-weather-box .condition-row{
    font-size: inherit;
}

.small-icon{
   

    width: var(--small-icon-side-length);
    height: var(--small-icon-side-length);

    /* border: 2px solid black; */
    background-position: center center;
    background-repeat: no-repeat;
    background-size: contain;

    flex: 0 0 auto;

    background-color: white;

}


@media (max-width: 425px) {
    :root {
        font-size: 7px;

        --font-size-large: 2rem;
        --font-size-jumbo: 2.5rem;

        --big-icon-side-length: 50px;

        --button-height: 30px;
        --button-padding: 4px;
    }

    body {
        max-width: 350px;
        overflow-y: scroll;
        height: 100vh;
        margin: 10px;
        justify-content: center;
        align-items: center;
        

    }

    .main-container {
        /* max-width: 400px; */
        min-width: 0px;
        height: 85vh;
        margin: 10px;
        gap: 5px;
        justify-content: center;
    }

    .header {
        /* height: 10vh; */
        justify-content: center;
        align-items: center;
        flex-direction: column;
        height: 150px;
    }

    .convert-temp-btn {

       
        width: 100px;

    }


    .search-bar {
        margin-left: inherit;
        width: 200px;
     


    }

    .search-btn {
        font-size: var(--font-size-large);
        border-radius: var(--general-border-radius);
        width: 100px;
      
    }

    .middle-section {
        width: 100%;
        height: 500px;

    }


    .todays-weather-container {

        width: 70%;
        justify-content: center;
        align-items: center;

    }

    .weather-container-header {
        display: flex;
        width: 100%;
        gap: var(--standard-gap);
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

    .todays-weather-location {
    
        text-align: center;
        overflow: hidden;
        text-overflow: ellipsis;
        width: 90%;

    }

    .todays-weather-localtime {

        margin-left: inherit;
        font-size: var(--font-size-large);
        white-space: nowrap;
    }

    .weather-container-second-row {
    
        flex-direction: column;
      
        justify-content: left;
        align-items: center;
    }

    
    

    .condition-row {
       
        justify-content: space-around;
    


      
    }


    .weather-like{
       
        /* height: 40px; */
       
        padding: 3px;
        font-size: var(--font-size-medium);
        
        
    }
    

}

